# pybedlite

./: .gitignore  .gitmodules  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  publish_pybedlite.yml  python_package.yml  pythonpackage.yml  tests.yml  wheels.yml
benchmarks/: conftest.py  test_benchmark_runtime.py
ci/: check.sh  flake8.cfg
docs/: api.rst  conf.py  index.rst  installation.rst
pybedlite/: __init__.py  bed_record.py  bed_source.py  bed_writer.py  overlap_detector.py
pybedlite/tests/: __init__.py  conftest.py  test_overlap_detector.py  test_pybedlite.py
tests/: conftest.py  test_overlap_detector.py  test_pybedlite.py
tests/benchmarks/: test_benchmark_runtime.py
